<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dellpc.bloodbank.emergency">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView47"
        android:layout_marginTop="71dp"
        android:text="@string/nepal_red_cross_society"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView39"
        android:text="@string/_01_5006465"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView48"
        android:text="@string/lalitpur_blood_bank"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView45"
        android:text="@string/_01_5006464"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView50"
        android:layout_centerHorizontal="true"
        android:text="@string/nobel_blood_transfusion_centre"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="226dp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView47"
        android:text="@string/_01_4110842"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="258dp"
        android:layout_alignLeft="@+id/textView39" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView44"
        android:text="@string/youth_for_blood"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="299dp"
        android:layout_alignLeft="@+id/textView39" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView39"
        android:layout_below="@+id/textView49"
        android:text="@string/_984_3552882"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="331dp"
        android:layout_alignLeft="@+id/textView39" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/emergency_contacts"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="16dp" />
</RelativeLayout>