<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/xc"
    android:exported="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dellpc.bloodbank.Register">


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_dropdown"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/spinner1"
        android:background="@drawable/mybtnselect"
        android:text="@string/register"
        android:layout_toLeftOf="@+id/spinner1" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText7"
        android:layout_alignBottom="@+id/editText7"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button5"
        android:layout_marginEnd="29dp"
        android:background="@drawable/mybtnselect"
        android:text="@string/cancel"
        android:layout_marginRight="29dp"
        android:layout_alignParentRight="true" />

    <RadioGroup
        android:id="@+id/radio_group_install_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"

        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@android:color/background_light"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@android:color/background_light"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/editText99"
        android:layout_marginTop="5dp"
        android:text="@string/sex_"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:focusedByDefault="true"
        android:hint="@string/email_id_"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editText99"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dob_dd_mm_yyyy"
        android:inputType="date"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="40dp"
        android:text="@string/blood_group_"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7">

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        android:textSize="46sp"
        android:textStyle="italic"
        android:typeface="serif" />


</RelativeLayout>
