<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/xc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dellpc.bloodbank.Admin">

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/mybtnselect"
        android:text="@string/log_out"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@drawable/mybtnselect"
        android:text="@string/show_all_blood"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText10"
        android:layout_alignStart="@+id/button18"
        android:layout_marginBottom="-207dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ad" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:cursorVisible="false"
        android:duplicateParentState="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:text="@string/guest"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:background="@drawable/mybtnselect"
        android:onClick="buttonClick"
        android:text="@string/search_donors"
        android:textSize="24sp" />

</RelativeLayout>
