<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dellpc.bloodbank.Loign">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/lg"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="46sp"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView41"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mybtnselect"
        android:text="@string/login"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:layout_marginTop="46dp"
        android:text="@string/forgetten_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        tools:text="Forgetten Password?" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/textView40"
        android:layout_marginTop="17dp"
        android:layout_toStartOf="@+id/textView41"
        android:clickable="true"
        android:text="@string/click_here"
        android:textColor="@color/colorPrimaryDark"
        android:focusable="true"
        android:layout_toLeftOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/textView40"
        android:layout_toRightOf="@+id/textView40"
        android:background="@drawable/mybtnselect"
        android:text="@string/register"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>
