<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bloodselection_guest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dellpc.bloodbank.bloodselection">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:text="@string/select_blood_group"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybtnselect"
        android:text="@string/logout"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/chart" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mybtnselect"
        android:text="@string/submit"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/button13"
        android:layout_alignTop="@+id/textView6"
        android:background="@color/button"
        android:theme="@style/Animation.AppCompat.DropDownUp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginTop="11dp"
        android:layout_toStartOf="@+id/button9"
        android:clickable="false"
        android:duplicateParentState="false"
        android:text="@string/guest"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>
