<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">


    <TextView
        android:id="@+id/nameee"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="40"
        android:gravity="center"
        android:text="@string/textview1"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blooo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/textview2"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/addd"
                android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>